--- a/B18_Code/CMakeLists.txt
+++ b/B18_Code/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 project(B18_Code)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(B18_Code main.cpp Disk.cpp Disk.h)
+add_executable(B18_Code interface_new.cpp Disk.cpp)
