--- a/B18_Code/CMakeLists.txt
+++ b/B18_Code/CMakeLists.txt
@@ -3,4 +3,4 @@ project(B18_Code)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(B18_Code interface.cpp Disk.cpp schema.cpp block_access.cpp external_fs_commands.cpp algebra.cpp algebra.h)
+add_executable(B18_Code interface.cpp Disk.cpp schema.cpp block_access.cpp external_fs_commands.cpp algebra.cpp algebra.h OpenRelTable.cpp)
