--- a/.gitignore
+++ b/.gitignore
@@ -3,28 +3,23 @@
 
 # Igonre .idea folder files
 .idea/
-
-# Ignore cmake debug files
-/Archive/cmake-build-debug
-
-# Igonre .idea folder files
 /Archive/.idea/
+/B18_Code/.idea
+/B18_Code/XFS_Interface_Code/.idea
+
+# Idea Misc
+.idea/csv-plugin.xml
+.idea/misc.xml
 
 # Ignore cmake debug files
 /B18_Code/cmake-build-debug
-
-# Igonre .idea folder files
-/B18_Code/.idea
-
 /B18_Code/XFS_Interface_Code/cmake-build-debug
-/B18_Code/XFS_Interface_Code/.idea
 /B18_Code/XFS_Interface_Code/CMakeFiles
+/B18_Code/CMakeFiles
+/Archive/cmake-build-debug
 
+# Disk and Default Dump Files 
+/B18_Code/Disk/disk
 /B18_Code/attribute_catalog
 /B18_Code/relation_catalog
 /B18_Code/block_allocation_map
-
-/B18_Code/CMakeFiles
-
-.idea/csv-plugin.xml
-.idea/misc.xml
