--- a/B18_Code/XFS_Interface_Code/CMakeLists.txt
+++ b/B18_Code/XFS_Interface_Code/CMakeLists.txt
@@ -3,4 +3,4 @@ project(XFS-Interface)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(XFS-Interface interface.cpp Disk.cpp schema.cpp block_access.cpp external_fs_commands.cpp OpenRelTable.cpp algebra.cpp)
+add_executable(XFS-Interface interface.cpp Disk.cpp schema.cpp block_access.cpp external_fs_commands.cpp OpenRelTable.cpp algebra.cpp BPlusTree.cpp BPlusTree.h)
