Frontend code added, all dependencies placed
- Need to remove errors

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /B18_Code/XFS_Interface_Code/cmake-build-debug
 /B18_Code/XFS_Interface_Code/CMakeFiles
 /B18_Code/CMakeFiles
+/B18_Code/Frontend_Interface/cmake-build-debug/
 /Archive/cmake-build-debug
 
 # Disk and Default Dump Files 
