Disk Class File added and CMakeLists updated
- Disk class file and its header

--- a/B18_Code/Frontend_Interface/CMakeLists.txt
+++ b/B18_Code/Frontend_Interface/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Frontend-Interface)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Frontend-Interface frontend.cpp)
+add_executable(Frontend-Interface frontend.cpp Disk.cpp)
