Minor Gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@
 /B18_Code/attribute_catalog
 /B18_Code/relation_catalog
 /B18_Code/block_allocation_map
-B18_Code/Disk/disk
+/B18_Code/XFS_Interface_Code/cmake-build-debug---remote/
