Frontend Class created
- Frontend class created, to be done by students based on Frontend Programming Interface Doc

--- a/B18_Code/Frontend_Interface/CMakeLists.txt
+++ b/B18_Code/Frontend_Interface/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Frontend-Interface)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Frontend-Interface frontend.cpp ../DiskClass/Disk.cpp)
+add_executable(Frontend-Interface frontend-runner.cpp ../DiskClass/Disk.cpp Frontend.cpp Frontend.h)
