--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Install Dependencies
-        run: sudo apt install zip
+        run: sudo apt install zip && ls
         
       - name: Create NITCbase.zip
         run: zip NITCbase.zip .
