--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: 'downloads'
-          destination-github-username: 'jessiyajoy'
-          destination-repository-name: 'Nitcbase/nitcbase-download'
+          destination-github-username: 'Nitcbase'
+          destination-repository-name: 'nitcbase-download'
           user-email: jessiyajoy@gmail.com
           commit-message: "Update from $REPOSITORY_URL@commit"
           target-branch: main
