--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,13 +35,13 @@ jobs:
       - name: Pushes to another repository
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+#         env:
+#           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: downloads
           destination-github-username: 'Nitcbase'
           destination-repository-name: 'nitcbase-download'
           user-email: jessiyajoy@gmail.com
-          commit-message: "Update from $REPOSITORY_URL@commit"
+          commit-message: "Automated update triggered by push to nitcbase repo"
           target-branch: main
 #           target-directory: 'NITCbase'
