Adding StaticBuffer.cpp, BlockBuffer.cpp & their headers

--- a/Frontend_Interface/CMakeLists.txt
+++ b/Frontend_Interface/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Frontend-Interface)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Frontend-Interface frontend-runner.cpp ../Disk_Class/Disk.cpp Frontend.cpp Frontend.h ../Buffer/buffer.cpp)
+add_executable(Frontend-Interface frontend-runner.cpp ../Disk_Class/Disk.cpp Frontend.cpp Frontend.h ../Buffer/StaticBuffer.cpp ../Buffer/BlockBuffer.cpp )
