--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ Frontend_Interface/cmake-build-debug/
 # Local copy of Executables
 XFS_Interface/XFS-Interface
 Frontend_Interface/Frontend-Interface
+
+# Ignore build files
+build
+
+# Ignore .vscode files
+.vscode
